--- a/client/styles/vars.module.css
+++ b/client/styles/vars.module.css
@@ -1,3 +1,6 @@
 @value primaryColor: #DFBC00;
 @value secondaryColor: #2E2C73;
 @value extraColor: #DC9104;
+
+@value breakpointOne: 640px;
+@value breakpointTwo: 1024px;
