--- a/client/components/Header.module.css
+++ b/client/components/Header.module.css
@@ -1,8 +1,14 @@
+@value values: "../styles/vars.module.css";
+@value breakpointOne, breakpointTwo from values;
 
-.header {
+.container {
     min-height: 100vh;
     min-width: 100vw;
-    padding-left: 2rem;
+}
+
+.header {
+    width: 20rem; 
+    margin: 0 auto;
     padding-top: 25vh;
 }
 
@@ -17,8 +23,9 @@
     margin-top: 5rem;
     color: white;
     display: grid; 
-    grid-template-columns: 40% 30% 30%;
+    grid-template-columns: 8rem 12rem;
     grid-template-rows: 7rem 7rem 2rem;
+    width: 20rem;
 }
 
 .profile_info {
@@ -26,7 +33,7 @@
     flex-direction: column;
     justify-content: flex-end;
     padding-bottom: 1rem;
-    grid-column: 2 / span 3;
+    grid-column: 2;
     grid-row: 2;
     z-index: 2;
 }
@@ -58,4 +65,29 @@
 .tagline {
     font-size: .8rem; 
     font-weight: lighter;
+}
+
+@media screen and (min-width: breakpointOne) {
+    .header {
+        width: 40rem;
+        margin: 0 auto;
+    }
+
+    .profile {
+        grid-template-columns: 18rem 22rem;
+        grid-template-rows: 7rem 13rem 2rem;
+    }
+
+    .image {
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .profile_intro {
+        font-size: 1.8rem;
+    }
+
+    .profile_name {
+        font-size: 2.5rem;
+    }
 }
