--- a/client/components/Background.module.css
+++ b/client/components/Background.module.css
@@ -1,5 +1,5 @@
 @value values: "../styles/vars.module.css";
-@value primaryColor, secondaryColor, extraColor from values;
+@value primaryColor, breakpointOne, breakpointTwo from values;
 
 .container {
     min-width: 100vw;
@@ -22,4 +22,19 @@
     text-align: center;
     position: relative; 
     top: -15rem;
+}
+
+@media screen and (min-width: breakpointOne) {
+    .container {
+        padding-top: 20vh;
+    }
+
+    .background_image {
+        width: 20rem;
+        height: 30rem;
+    }
+
+    .background_title {
+        font-size: 3rem;
+    }
 }
