--- a/client/components/Background.module.css
+++ b/client/components/Background.module.css
@@ -1,5 +1,5 @@
 @value values: "../styles/vars.module.css";
-@value primaryColor, breakpointOne, breakpointTwo from values;
+@value primaryColor, breakpointOne from values;
 
 .container {
     min-width: 100vw;
