--- a/components/Detail.module.css
+++ b/components/Detail.module.css
@@ -70,6 +70,12 @@
     display: flex; 
     flex-direction: column;
     align-items: flex-end;
+    max-width: 20rem;
+    margin: 0 auto;
+}
+
+.video_file {
+    max-width: 20rem;
 }
 
 .sound {
@@ -103,6 +109,14 @@
     .tools {
         grid-template-columns: repeat(4, 7rem);
         width: 30rem;
+    }
+
+    .video {
+        max-width: 40rem;
+    }
+
+    .video_file {
+        max-width: 40rem;
     }
     
 }
