--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -44,34 +44,7 @@
 
 .overview {
     margin: 0 auto;
-    width: 20rem;
-}
-
-.project {
-    margin-bottom: 2.5rem;
-    padding: 2rem 0;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    border-radius: .2rem;
-    width: 20rem;
-    height: 23rem;
-}
-
-.project_container {
-    max-width: 15rem; 
-    margin: 0 auto;
-}
-
-.subtitle {
-    margin: 0;
-    font-size: 1.5rem;
-    height: 4rem;
-}
-
-.tags {
-    max-width: 10rem;
-    display: flex; 
-    justify-content: space-between;
-    text-transform: uppercase;
+    width: 100vw;
 }
 
 .bottom {
@@ -98,19 +71,13 @@
 @media screen and (min-width: breakpointOne) {
     .overview {
         display: grid; 
-        grid-template-columns: repeat(2, 20rem);
-        grid-gap: .5rem;
-        margin: 0 auto;
-        width: 40.5rem;
+        grid-template-columns: repeat(3, 20rem);
     }
 }
 
 @media screen and (min-width: breakpointTwo) {
     .overview {
         display: grid; 
-        grid-template-columns: repeat(3, 20rem);
-        grid-gap: .5rem;
-        margin: 0 auto;
-        width: 60.5rem;
+        grid-template-columns: repeat(5, 25rem);
     }
 }
