--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -3,43 +3,62 @@
 
 .container {
     padding-top: 10vh;
-    background-color: white;
+    background-color: black;
 }
 
 .intro {
     padding: 2rem;
-    max-width: 40rem;
+    max-width: 55rem;
     margin: 0 auto;
 }
 
 .title {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     text-transform: uppercase;
     text-align: center;
+    color: white;
 }
 
 .paragraph {
     font-size: 1.2rem;
-    color: black; 
+    line-height: calc(1.2 * 1.7);
+    color: white; 
 }
 
 .devine {
     font-size: 1.5rem;
-    margin: 0; 
+    margin-top: 5rem;
+    margin-bottom: 10rem; 
     text-align: center;
     font-weight: bold;
+    text-transform: uppercase;
+    display: flex; 
+    flex-direction: column;
+    align-items: center
 }
 
 .gold {
-    color: primaryColor;
+    color: white;
+    padding: .5rem 2rem;
+    background-color: primaryColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
 }
 
 .orange {
-    color: extraColor;
+    color: white;
+    padding: .5rem 2rem;
+    background-color: extraColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
 }
 
 .blue {
-    color: secondaryColor;
+    color: white;
+    padding: .5rem 2rem;
+    background-color: secondaryColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
 }
 
 .overview {
@@ -69,6 +88,11 @@
 }
 
 @media screen and (min-width: breakpointOne) {
+    .devine {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
     .overview {
         display: grid; 
         grid-template-columns: repeat(2, calc(100vw/2));
