--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -13,6 +13,8 @@
     position: relative; 
     top: 0; 
     left: 0;
+    overflow: hidden; 
+    display: inline-block;
 }
 
 .image_overlay {
@@ -34,12 +36,32 @@
     left: 0;
 }
 
+.image_container img {
+    display: block;
+    transition: .5s ease-in;
+}
+
+.image_container:hover img {
+    transform: scale(1.2);
+}
+
 .project_container {
     grid-row: 1;
     grid-column: 1;
     max-width: 15rem; 
     margin: 2rem;
     z-index: 2;
+}
+
+.project_description {
+    grid-row: 2;
+    grid-column: 1;
+    z-index: 2;
+    width: calc(100vw/1.5);
+    line-height: 1.5rem;
+    color: white;
+    margin: 0 2rem;
+    align-self: flex-end;
 }
 
 .subtitle {
@@ -74,6 +96,9 @@
     .project_container {
         width: 10rem;
     }
+    .project_description {
+        width: 15rem;
+    }
 }
 
 @media screen and (min-width: breakpointTwo) {
@@ -88,5 +113,8 @@
     }
     .project_container {
         width: 15rem;
+    }
+    .project_description {
+        width: 20rem;
     }
 }
