--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -102,6 +102,61 @@
     width: 10rem;
 }
 
+.intro {
+    padding: 2rem;
+    max-width: 55rem;
+    margin: 0 auto;
+}
+
+.title {
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+}
+
+.introduction {
+    font-size: 1.2rem;
+    line-height: calc(1.2 * 1.7);
+    color: white; 
+}
+
+.devine {
+    font-size: 1.5rem;
+    margin-top: 5rem;
+    margin-bottom: 10rem; 
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: flex; 
+    flex-direction: column;
+    align-items: center
+}
+
+.gold {
+    color: white;
+    padding: .5rem 2rem;
+    background-color: primaryColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
+}
+
+.orange {
+    color: white;
+    padding: .5rem 2rem;
+    background-color: extraColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
+}
+
+.blue {
+    color: white;
+    padding: .5rem 2rem;
+    background-color: secondaryColor;
+    border-radius: .8rem;
+    border: .2rem solid white;
+}
+
 @media screen and (min-width: breakpointOne) {
     .header {
         width: 40rem;
@@ -148,5 +203,9 @@
         font-size: 1.5rem;
         width: 40rem;
         margin-left: 10rem;
+    }
+    .devine {
+        flex-direction: row;
+        justify-content: space-evenly;
     }
 }
