--- a/components/Detail.module.css
+++ b/components/Detail.module.css
@@ -2,10 +2,15 @@
 @value breakpointOne, breakpointTwo from values;
 
 .container {
-    min-height: 100vh; 
+    min-height: 92vh; 
     margin: 2rem;
     background-color: black;
     color: white;
+}
+
+.middle {
+    width: 20rem;
+    margin: 0 auto;
 }
 
 .cross {
@@ -70,12 +75,6 @@
     display: flex; 
     flex-direction: column;
     align-items: flex-end;
-    max-width: 20rem;
-    margin: 0 auto;
-}
-
-.video_file {
-    max-width: 20rem;
 }
 
 .sound {
@@ -85,6 +84,10 @@
 @media screen and (min-width: breakpointOne) {
     .header {
         max-width: 40rem;
+    }
+
+    .middle {
+        width: 40rem;
     }
 
     .information {
