--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,5 +1,5 @@
 @value values: "../styles/vars.module.css";
-@value primaryColor, extraColor, breakpointOne, breakpointTwo from values;
+@value primaryColor, extraColor, secondaryColor, breakpointOne, breakpointTwo from values;
 
 .container {
     min-height: 100vh;
@@ -123,8 +123,7 @@
 
 .devine {
     font-size: 1.5rem;
-    margin-top: 5rem;
-    margin-bottom: 10rem; 
+    margin: 2rem 0;
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
@@ -207,5 +206,7 @@
     .devine {
         flex-direction: row;
         justify-content: space-evenly;
+        margin-top: 5rem;
+        margin-bottom: 10rem; 
     }
 }
