--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -2,7 +2,6 @@
 @value primaryColor, secondaryColor, extraColor, breakpointOne, breakpointTwo from values;
 
 .container {
-    padding-top: 10vh;
     background-color: black;
 }
 
@@ -12,6 +11,10 @@
 }
 
 @media screen and (min-width: breakpointOne) {
+    .container {
+        padding-top: 10vh;
+    }
+    
     .overview {
         display: grid; 
         grid-template-columns: repeat(2, calc(100vw/2));
