--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,4 +1,4 @@
-@value values: "../styles/vars.module.css";
+@value values: "../../styles/vars.module.css";
 @value primaryColor, secondaryColor, extraColor, breakpointOne, breakpointTwo from values;
 
 .container {
