--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,5 +1,4 @@
-@value values: "../../styles/vars.module.css";
-@value primaryColor, extraColor, secondaryColor, breakpointOne, breakpointTwo from values;
+@import '/styles/variables';
 
 @font-face {
     font-family: 'Noto-Bold';
@@ -97,7 +96,7 @@
 }
 .background_title {
     margin: 0;
-    color: primaryColor;
+    color: $primary-color;
     font-family: Noto-Bold;
     font-size: 2rem;
     text-align: center;
@@ -115,7 +114,7 @@
 .paragraph {
     font-family: Noto-Light;
     font-size: 1.2rem;
-    color: extraColor; 
+    color: $extra-color; 
     width: 10rem;
 }
 
@@ -158,7 +157,7 @@
 .gold {
     color: white;
     padding: .5rem 2rem;
-    background-color: primaryColor;
+    background-color: $primary-color;
     border-radius: .8rem;
     border: .2rem solid white;
     width: 15rem;
@@ -169,7 +168,7 @@
 .orange {
     color: white;
     padding: .5rem 2rem;
-    background-color: extraColor;
+    background-color: $extra-color;
     border-radius: .8rem;
     border: .2rem solid white;
     width: 15rem;
@@ -180,7 +179,7 @@
 .blue {
     color: white;
     padding: .5rem 2rem;
-    background-color: secondaryColor;
+    background-color: $secondary-color;
     border-radius: .8rem;
     border: .2rem solid white;
     width: 15rem;
@@ -188,7 +187,7 @@
     justify-content: center;
 }
 
-@media screen and (min-width: breakpointOne) {
+@media screen and (min-width: $breakpoint-small) {
     .header {
         width: 40rem;
         margin: 0 auto;
