Use dark variable instead of black #29

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,5 +1,7 @@
+@import '/styles/variables';
+
 .container {
-    background-color: black;
+    background-color: $dark;
     width: 100vw;
     padding-top: 5rem;
 }
