--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #DFBC00;
 $secondary-color: #2E2C73;
 $extra-color:  #DC9104;
 $white: #FFFFFF;
+$dark: #191919;
 
 $breakpoint-small: 640px;
 $breakpoint-medium: 1024px;
