--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
 .container {
     min-height: 100vh;
     min-width: 100vw;
-    background-color: black;
+    background-color: $dark;
 }
 
 .header {
