--- a/pages/404.module.scss
+++ b/pages/404.module.scss
@@ -3,7 +3,7 @@
 .glitch_container {
     width: 100vw; 
     height: 100vh;
-    background-color: black;
+    background-color: $dark;
 }
 
 .hidden {
