--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,3 +6,7 @@ $dark: #191919;
 
 $breakpoint-small: 640px;
 $breakpoint-medium: 1024px;
+
+$font-primary: Noto-Light, Arial, Helvetica, sans-serif;
+$font-secondary: Noto-Medium, Arial, Helvetica, sans-serif;
+$font-bold: Noto-Bold, Arial, Helvetica, sans-serif;
