--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -2,9 +2,10 @@
 @import '/styles/fonts';
 
 .container {
+    background-color: $dark;
+
     min-height: 100vh;
     min-width: 100vw;
-    background-color: $dark;
 }
 
 .header {
@@ -14,42 +15,48 @@
 }
 
 .greeting {
-    color: white; 
-    text-transform: uppercase;
-    font-family: Noto-Bold;
-    font-size: 1.8rem;
     margin: 0;
+
+    font-family: $font-bold;
+    font-size: 1.8rem; 
+    text-transform: uppercase;
+    color: white;
 }
 
 .profile {
-    margin-top: 5rem;
-    color: white;
-    display: grid; 
+    display: grid;
+    grid-template-rows: 7rem 7rem 2rem; 
     grid-template-columns: 8rem 12rem;
-    grid-template-rows: 7rem 7rem 2rem;
+
     width: 20rem;
+    margin-top: 5rem;
+
+    color: white;
 }
 
 .profile_info {
+    z-index: 2;
+
     display: flex; 
     flex-direction: column;
     justify-content: flex-end;
-    font-family: Noto-Medium;
+
     padding-bottom: 1rem;
-    grid-column: 2;
     grid-row: 2;
-    z-index: 2;
+    grid-column: 2;
+
+    font-family: $font-secondary;
 }
 
 .profile_intro {
-    font-size: 1.5rem;
     margin: 0;
+    font-size: 1.5rem;
 }
 
 .profile_name {
+    margin: 0;
     font-size: 1.8rem;
     font-weight: bold;
-    margin: 0;
 }
 
 .profile_image {
@@ -58,11 +65,12 @@
 }
 
 .image {
-    background-image: url("/assets/kaat.png");
-    background-repeat: no-repeat;
     width: 14rem; 
     height: 14rem;
+
+    background-image: url('/assets/kaat.png');
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .tagline {
@@ -75,22 +83,25 @@
 }
 
 .background_image {
-    background-image: url("/assets/heart-code.png");
-    background-repeat: no-repeat;
-    background-size: contain;
     width: 10rem; 
     height: 20rem;
     margin: 0 auto;
+
+    background-image: url('/assets/heart-code.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .background_title {
-    margin: 0;
-    color: $primary-color;
-    font-family: Noto-Bold;
-    font-size: 2rem;
-    text-align: center;
     position: relative; 
     top: -13rem;
+
+    margin: 0;
+
+    font-family: $font-bold;
+    font-size: 2rem;
+    text-align: center;
+    color: $primary-color;
 }
 
 .info {
@@ -100,21 +111,22 @@
     margin: 0 10vw;
 }
 
-.paragraph {
-    font-family: Noto-Light;
-    font-size: 1.2rem;
-    color: $extra-color; 
+.paragraph { 
     width: 10rem;
+    font-family: $font-primary;
+    font-size: 1.2rem;
+    color: $extra-color;
 }
 
 .intro {
-    padding: 2rem;
-    max-width: 55rem;
     margin: 0 auto;
+    padding: 2rem;
+
+    max-width: 55rem;
 }
 
 .title {
-    font-family: Noto-Bold;
+    font-family: $font-bold;
     font-size: 2.5rem;
     text-transform: uppercase;
     text-align: center;
@@ -122,7 +134,7 @@
 }
 
 .introduction {
-    font-family: Noto-Light;
+    font-family: $font-primary;
     font-size: 1.2rem;
     line-height: calc(1.2 * 1.7);
     color: white; 
@@ -135,22 +147,27 @@
 }
 
 .devine button {
-    font-family: Noto-Medium;
-    font-size: 1.5rem;
     margin: 2rem 0;
-    text-align: center;
+
+    font-family: $font-secondary;
+    font-size: 1.5rem;
     text-transform: uppercase;
+    text-align: center;
+
     cursor: pointer;  
 }
 
 .filter__button {
-    color: white;
-    padding: .5rem 2rem;
-    border-radius: .8rem;
-    border: .2rem solid white;
-    width: 15rem;
     display: flex; 
     justify-content: center;
+
+    width: 15rem;
+    padding: .5rem 2rem;
+
+    color: white;
+
+    border: .2rem solid white;
+    border-radius: .8rem;
 }
 
 @media screen and (min-width: $breakpoint-small) {
@@ -160,8 +177,8 @@
     }
 
     .profile {
-        grid-template-columns: 18rem 22rem;
         grid-template-rows: 7rem 13rem 2rem;
+        grid-template-columns: 18rem 22rem;
     }
 
     .image {
@@ -187,8 +204,8 @@
     }
 
     .background_title {
-        font-size: 5rem;
         top: -18rem;
+        font-size: 5rem;
     }
 
     .info {
@@ -196,10 +213,11 @@
     }
 
     .paragraph {
-        font-size: 1.5rem;
         width: 40rem;
         margin-left: 10rem;
+        font-size: 1.5rem;
     }
+
     .devine {
         flex-direction: row;
         justify-content: space-evenly;
