--- a/components/Tag/Tag.module.scss
+++ b/components/Tag/Tag.module.scss
@@ -1,7 +1,7 @@
-@import '/styles/fonts';
+@import '/styles/variables';
 
 .tag {
-    font-family: Noto-Medium;
     padding: .5rem;
+    font-family: $font-secondary;
     border-radius: .7rem;
 }
