--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
-    font-family: 'Noto-Bold';
+    font-family: Noto-Bold;
     src: url('../public/fonts/notosans-bold.woff2');
 }
 
 @font-face {
-    font-family: 'Noto-Medium';
+    font-family: Noto-Medium;
     src: url('../public/fonts/notosans-medium.woff2');
 }
 
 @font-face {
-    font-family: 'Noto-Light';
+    font-family: Noto-Light;
     src: url('../public/fonts/notosans-light.woff2');
 }
