--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -7,220 +7,215 @@
   min-width: 100vw;
 }
 
-.header {
+// PROFILE
+.profile {
   width: 20rem; 
   margin: 0 auto;
   padding-top: 25vh;
-}
 
-.greeting {
-  margin: 0;
-
-  font-family: $font-bold;
-  font-size: 1.8rem; 
-  text-transform: uppercase;
-  color: $white;
-}
-
-.profile {
-  display: grid;
-  grid-template-rows: 7rem 7rem 2rem; 
-  grid-template-columns: 8rem 12rem;
-
-  width: 20rem;
-  margin-top: 5rem;
-
-  color: $white;
-}
-
-.profile_info {
-  z-index: 2;
-
-  display: flex; 
-  flex-direction: column;
-  justify-content: flex-end;
-
-  padding-bottom: 1rem;
-  grid-row: 2;
-  grid-column: 2;
-
-  font-family: $font-secondary;
-}
-
-.profile_intro {
-  margin: 0;
-  font-size: 1.5rem;
-}
-
-.profile_name {
-  margin: 0;
-  font-size: 1.8rem;
-  font-weight: bold;
-}
-
-.profile_image {
-  grid-row: 1 / span 3;
-  grid-column: 1 / span 2;
-}
-
-.image {
-  width: 14rem; 
-  height: 14rem;
-
-  background-image: url('/assets/kaat.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.tagline {
-  font-size: .8rem; 
-  font-weight: lighter;
-}
-
-.background {
-  padding-top: 40vh;
-}
-
-.background_image {
-  width: 10rem; 
-  height: 20rem;
-  margin: 0 auto;
-
-  background-image: url('/assets/heart-code.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.background_title {
-  position: relative; 
-  top: -13rem;
-
-  margin: 0;
-
-  font-family: $font-bold;
-  font-size: 2rem;
-  text-align: center;
-  color: $primary-color;
-}
-
-.info {
-  display: flex; 
-  flex-direction: row;
-  justify-content: flex-end;
-  margin: 0 10vw;
-}
-
-.paragraph { 
-  width: 10rem;
-  font-family: $font-primary;
-  font-size: 1.2rem;
-  color: $extra-color;
-}
-
-.intro {
-  margin: 0 auto;
-  padding: 2rem;
-
-  max-width: 55rem;
-}
-
-.title {
-  font-family: $font-bold;
-  font-size: 2.5rem;
-  text-transform: uppercase;
-  text-align: center;
-  color: $white;
-}
-
-.introduction {
-  font-family: $font-primary;
-  font-size: 1.2rem;
-  line-height: calc(1.2 * 1.7);
-  color: $white; 
-}
-
-.devine {
-  display: flex; 
-  flex-direction: column;
-  align-items: center;
-}
-
-.devine button {
-  margin: 2rem 0;
-
-  font-family: $font-secondary;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  text-align: center;
-
-  cursor: pointer;  
-}
-
-.filter__button {
-  display: flex; 
-  justify-content: center;
-
-  width: 15rem;
-  padding: .5rem 2rem;
-
-  color: $white;
-
-  border: .2rem solid $white;
-  border-radius: .8rem;
-}
-
-@media screen and (min-width: $breakpoint-small) {
-  .header {
+  @media screen and (min-width: $breakpoint-small) {
     width: 40rem;
     margin: 0 auto;
   }
 
-  .profile {
-    grid-template-rows: 7rem 13rem 2rem;
-    grid-template-columns: 18rem 22rem;
+  &__greeting {
+    margin: 0;
+
+    font-family: $font-bold;
+    font-size: 1.8rem; 
+    text-transform: uppercase;
+    color: $white;
   }
 
-  .image {
+  &__content {
+    display: grid;
+    grid-template-rows: 7rem 7rem 2rem; 
+    grid-template-columns: 8rem 12rem;
+
     width: 20rem;
-    height: 20rem;
+    margin-top: 5rem;
+
+    color: $white;
+
+    @media screen and (min-width: $breakpoint-small) {
+      grid-template-rows: 7rem 13rem 2rem;
+      grid-template-columns: 18rem 22rem;
+    }
   }
 
-  .profile_intro {
-    font-size: 1.8rem;
+  &__content_info {
+    z-index: 2;
+
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-end;
+  
+    padding-bottom: 1rem;
+    grid-row: 2;
+    grid-column: 2;
+  
+    font-family: $font-secondary;
   }
 
-  .profile_name {
-    font-size: 2.5rem;
-  }
-
-  .background {
-    padding-top: 20vh;
-  }
-
-  .background_image {
-    width: 20rem;
-    height: 30rem;
-  }
-
-  .background_title {
-    top: -18rem;
-    font-size: 5rem;
-  }
-
-  .info {
-    margin: 0 20vw;
-  }
-
-  .paragraph {
-    width: 40rem;
-    margin-left: 10rem;
+  &__content_intro {
+    margin: 0;
     font-size: 1.5rem;
   }
 
-  .devine {
+  &__content_name {
+    margin: 0;
+    font-size: 1.8rem;
+    font-weight: bold;
+
+    @media screen and (min-width: $breakpoint-small) {
+      font-size: 2.5rem;
+    }
+  }
+
+  &__image {
+    grid-row: 1 / span 3;
+    grid-column: 1 / span 2;
+
+    .image {
+      width: 14rem; 
+      height: 14rem;
+    
+      background-image: url('/assets/kaat.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      @media screen and (min-width: $breakpoint-small) {
+        width: 20rem;
+        height: 20rem;
+      }
+    }
+
+    .tagline {
+      font-size: .8rem; 
+      font-weight: lighter;
+    }
+  }
+}
+
+// INTRO
+.intro {
+  padding-top: 40vh;
+
+  @media screen and (min-width: $breakpoint-small) {
+    padding-top: 20vh;
+  }
+
+  &__image {
+    width: 10rem; 
+    height: 20rem;
+    margin: 0 auto;
+
+    background-image: url('/assets/heart-code.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @media screen and (min-width: $breakpoint-small) {
+      width: 20rem;
+      height: 30rem;
+    }
+  }
+
+  &__title {
+    position: relative; 
+    top: -13rem;
+
+    margin: 0;
+
+    font-family: $font-bold;
+    font-size: 2rem;
+    text-align: center;
+    color: $primary-color;
+
+    @media screen and (min-width: $breakpoint-small) {
+      top: -18rem;
+      font-size: 5rem;
+    }
+  }
+
+  &__info {
+    display: flex; 
     flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 5rem;
-    margin-bottom: 10rem; 
+    justify-content: flex-end;
+    margin: 0 10vw;
+
+    @media screen and (min-width: $breakpoint-small) {
+      margin: 0 20vw;
+    }
+
+    .paragraph { 
+      width: 10rem;
+      font-family: $font-primary;
+      font-size: 1.2rem;
+      color: $extra-color;
+
+      @media screen and (min-width: $breakpoint-small) {
+        width: 40rem;
+        margin-left: 10rem;
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+// PROJECTS
+.projects {
+  margin: 0 auto;
+  padding: 2rem;
+
+  max-width: 55rem;
+
+  &__title {
+    font-family: $font-bold;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    text-align: center;
+    color: $white;
+  }
+
+  &__intro {
+    font-family: $font-primary;
+    font-size: 1.2rem;
+    line-height: calc(1.2 * 1.7);
+    color: $white; 
+  }
+
+  &__tags {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: $breakpoint-small) {
+      flex-direction: row;
+      justify-content: space-evenly;
+      margin-top: 5rem;
+      margin-bottom: 10rem; 
+    }
+
+    button {
+      display: flex; 
+      justify-content: center;
+  
+      width: 15rem;
+      padding: .5rem 2rem;
+  
+      color: $white;
+  
+      border: .2rem solid $white;
+      border-radius: .8rem;
+  
+      margin: 2rem 0;
+  
+      font-family: $font-secondary;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      text-align: center;
+    
+      cursor: pointer; 
+    }
   }
 }
