--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -1,9 +1,24 @@
 @import '/styles/variables';
 
 .project {
+  position: relative;
   display: grid; 
   grid-template-rows: repeat(2, 10rem);
   grid-template-columns: 100vw;
+
+  .link {
+    position: unset;
+  
+    &::before {
+      content: "";
+
+      position: absolute;
+      inset: 0;
+
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
 .image_container {  
