--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -2,11 +2,80 @@
 
 .project {
   position: relative;
-  display: grid; 
-  grid-template-rows: repeat(2, 10rem);
-  grid-template-columns: 100vw;
+  height: 25rem;
 
-  .link {
+  &:hover,
+  &:active,
+  &:focus {
+    .project_image__img {
+      opacity: .35;
+      transform: scale(1.05);
+    }
+
+    @media screen and (min-width: $breakpoint-small) {
+      .project__description {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  }
+
+  &__container { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    width: 100%;
+    padding: 2rem;
+  }
+
+  &__description {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+
+    width: 100%;
+    padding: 1rem 2rem;
+
+    font-family: $font-primary;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: $white;
+    
+    @media screen and (min-width: $breakpoint-small) {
+      opacity: 0;
+      transform: translateY(2rem);
+      transition: .3s ease-in-out;
+      transition-property: opacity, transform;
+    }
+  }
+
+  &__subtitle {
+    margin: 0;
+    font-family: $font-bold;
+    font-size: 1.5rem;
+    color: $white;
+  }
+  
+  &__tags {
+    display: flex;
+    justify-content: space-between; 
+  
+    font-family: $font-secondary;
+    text-transform: uppercase;
+    color: $white;
+  
+    max-width: 10rem;
+
+    .tag {
+      padding: .5rem;
+      border-radius: .7rem;
+    }
+  }
+
+  .project__link {
     position: unset;
   
     &::before {
@@ -21,93 +90,25 @@
   }
 }
 
-.image_container {  
-  position: relative; 
-  top: 0; 
-  left: 0; 
-
-  display: inline-block;
-
-  grid-row: 1 / span 3;
-  grid-column: 1;
-
-  overflow: hidden;
-}
-
-.image_overlay {
+.project_image {  
   position: relative;
-  top: 0; 
-  left: 0;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
-  width: 100vw; 
-  height: 20rem;
-
-  background-color: rgb(0 0 0 / 45%);
-}
-
-.image_project {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 100vw;
-  height: 20rem;
-
-  object-fit: cover;
-}
-
-.image_container img {
-  display: block;
-  transition: .5s ease-in;
-}
-
-.project_container {
-  z-index: 2; 
-
-  margin: 2rem;
-  grid-row: 1;
-  grid-column: 1;
-
-  max-width: 15rem;
-}
-
-.project_description {
-  z-index: 2;
-
-  width: calc(100vw / 1.5);
-  margin: 0 2rem;
-  grid-row: 2;
-  grid-column: 1;
-  align-self: flex-end;
-
-  font-family: $font-primary;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  color: $white;
-}
-
-.subtitle {
-  margin: 0;
-  font-family: $font-bold;
-  font-size: 1.5rem;
-  color: $white;
-}
-
-.tags {
-  display: flex;
-  justify-content: space-between; 
-
-  font-family: $font-secondary;
-  text-transform: uppercase;
-  color: $white;
-
-  max-width: 10rem;
-}
-
-.tag {
-  padding: .5rem;
-  border-radius: .7rem;
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+    width: 100vw;
+    height: 20rem;
+  
+    object-fit: cover;
+    opacity: .75;
+    transition: .3s ease-in-out;
+    transition-property: transform, opacity;
+  }
 }
 
 @media screen and (min-width: $breakpoint-small) {
@@ -156,8 +157,4 @@
   .project_container:hover + .image_container img {
     transform: scale(1.2);
   } 
-
-  .project_container:hover + .image_container .image_overlay {
-    background-color: rgb(0 0 0 / 75%);
-  }
 }
